--- a/src/sample/main_window.fxml
+++ b/src/sample/main_window.fxml
@@ -8,18 +8,19 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="500.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.mainWindowController">
+<AnchorPane prefHeight="585.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.mainWindowController">
    <children>
       <ListView fx:id="mainWindowList" layoutX="61.0" layoutY="70.0" prefHeight="200.0" prefWidth="207.0" />
       <Text layoutX="107.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Loaded methods:" />
-      <Text layoutX="145.0" layoutY="293.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Input:" />
-      <Text layoutX="68.0" layoutY="431.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Result:" />
-      <Text fx:id="mainWindowResult" layoutX="50.0" layoutY="461.0" strokeType="OUTSIDE" strokeWidth="0.0" text="-" textAlignment="CENTER" wrappingWidth="80.0" />
-      <Button fx:id="mainWindowButtonRun" layoutX="222.0" layoutY="440.0" mnemonicParsing="false" text="Run" />
-      <Line endX="100.0" layoutX="168.0" layoutY="397.0" startX="-100.0" stroke="#949494" />
-      <TextField fx:id="mainWindowPar1" disable="true" layoutX="113.0" layoutY="305.0" prefHeight="31.0" prefWidth="156.0" />
-      <TextField fx:id="mainWindowPar2" disable="true" layoutX="113.0" layoutY="343.0" prefHeight="31.0" prefWidth="156.0" />
-      <Text layoutX="66.0" layoutY="326.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Par1" />
-      <Text layoutX="66.0" layoutY="364.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Par2" />
+      <Text layoutX="144.0" layoutY="373.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Input:" />
+      <Text layoutX="67.0" layoutY="511.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Result:" />
+      <Text fx:id="mainWindowResult" layoutX="49.0" layoutY="541.0" strokeType="OUTSIDE" strokeWidth="0.0" text="-" textAlignment="CENTER" wrappingWidth="80.0" />
+      <Button fx:id="mainWindowButtonRun" layoutX="221.0" layoutY="520.0" mnemonicParsing="false" text="Run" />
+      <Line endX="100.0" layoutX="167.0" layoutY="477.0" startX="-100.0" stroke="#949494" />
+      <TextField fx:id="mainWindowPar1" disable="true" layoutX="112.0" layoutY="385.0" prefHeight="31.0" prefWidth="156.0" />
+      <TextField fx:id="mainWindowPar2" disable="true" layoutX="112.0" layoutY="423.0" prefHeight="31.0" prefWidth="156.0" />
+      <Text layoutX="65.0" layoutY="406.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Par1" />
+      <Text layoutX="65.0" layoutY="444.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Par2" />
+      <TextField fx:id="mainWindowDescription" layoutX="61.0" layoutY="293.0" prefHeight="52.0" prefWidth="207.0" />
    </children>
 </AnchorPane>
