--- a/src/sample/view/main_window.fxml
+++ b/src/sample/view/main_window.fxml
@@ -21,6 +21,6 @@
       <TextField fx:id="mainWindowPar2" disable="true" layoutX="112.0" layoutY="423.0" prefHeight="31.0" prefWidth="156.0" />
       <Text layoutX="65.0" layoutY="406.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Par1" />
       <Text layoutX="65.0" layoutY="444.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Par2" />
-      <TextField fx:id="mainWindowDescription" layoutX="61.0" layoutY="293.0" prefHeight="52.0" prefWidth="207.0" />
+      <TextField fx:id="mainWindowDescription" editable="false" layoutX="61.0" layoutY="293.0" prefHeight="52.0" prefWidth="207.0" />
    </children>
 </AnchorPane>
